Wed Mar 18 17:43:26 GMT 2009    Tom Mortimer <tom@lemurconsulting.com>

    * flaxclient.php: Changed API functions to be clearer about overwriting 
      resources.
    * unittests/_testrestclient.php, unittests/test_database.php, 
      unittests/test_fields.php: Updated tests for API changes.

Wed Mar 18 16:23:32 GMT 2009    Tom Mortimer <tom@lemurconsulting.com>

    * unittests/runtests.php: Allow individual test cases to be run.
    * flaxerrors.php: Added FlaxDocumentError class.

Wed Mar 18 13:51:11 GMT 2009    Tom Mortimer <tom@lemurconsulting.com>

    * flaxclient.php: Fixed typo.
    * unittests/_testrestclient.php: Fixed db path pattern.
    * unittests/test_database.php, unittests/test_fields.php, 
      unittests/runtests.php: Added test suite runner.

Wed Mar 18 12:37:47 GMT 2009    Tom Mortimer <tom@lemurconsulting.com>

    * flaxclient.php: Added URL (and '-') encoding to path construction.

Wed Mar 18 12:10:51 GMT 2009    Tom Mortimer <tom@lemurconsulting.com>

    * flaxclient.php:  Modified to work with flax_search_service
    * _restclient.php: Fixed URL error. Throws exception for network problems.
    * unittests/_restclient.php, unittests/_testrestclient.php: Renamed to 
      avoid require() clash.
    * unittests/test_database.php: Modifed to work with flax_search_service.
    * unittests/test_fields.php: Changed DB name.

Tue Mar 17 17:48:52 GMT 2009    Tom Mortimer <tom@lemurconsulting.com>

    * flaxclient.php, unittests/_restclient.php: changed /fields/ url  
      to /schema/fields/

Mon Mar 16 14:13:38 GMT 2009    Tom Mortimer <tom@lemurconsulting.com>

    * flaxclient.php: Changed paths to use '/db/' prefix.
    * unittests/_restclient.php: Rewritten using regexps.
    * unittests/test_fields/php: Tidied.

Mon Mar 16 10:02:52 GMT 2009    Tom Mortimer <tom@lemurconsulting.com>

    * flaxclient.php, unittests/_restclient.php, unittests/test_fields.php: 
      Added delete field method.
